testing fixing gap in fuzzy matches

--- a/style.css
+++ b/style.css
@@ -135,12 +135,19 @@ td.selected:hover
 .itemCell
 {
     position: relative;
+
+    width: 100px;
+    height: 100px;
+
+    /* keeps images smaller than 100x100 centered */
+    text-align: center;
 }
 
 .itemImage
 {
-    width: 100px;
-    height: 100px;
+    /* preserves aspect ratio (prevents stretching); might want to find a way to scale up images smaller than the 100x100 of the cell itself? */
+    max-width: 100%;
+    max-height: 100%;
 
     /* Makes the item images stand out a touch more */
     --itemImageOutlineColor: rgb(0, 0, 0, 0.5); /* default */
@@ -375,7 +382,7 @@ td.selected:hover
 
     /* TEST */
     /* DIDNT WORK */
-    /* margin: 0; */
+    margin: 0;
 }
 
 #fuzzyMatchesHolder div
@@ -503,5 +510,16 @@ td.selected:hover
 #contactOverlay .overlayInner
 {
     min-width: 12em;
+}
+
+.watermark
+{
+    text-align: right;
+
+    font-size: 16px;
+    font-weight: bold;
+
+    margin: 10px;
+    margin-top: 2px;
 }
 
